Writing course #1 for advance Git

--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -237,6 +237,11 @@ body {
   border: 0;
   box-shadow: none; }
 
+.reveal section img.nobg {
+  border: 0;
+  box-shadow: none;
+  background: none; }
+
 .reveal a img {
   -webkit-transition: all .15s linear;
   -moz-transition: all .15s linear;
